--- a/src/components/styles/Landing.css
+++ b/src/components/styles/Landing.css
@@ -89,6 +89,16 @@
   position: relative;
 }
 
+.character-container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  min-height: 60vh;
+  z-index: 1;
+}
+
 .character-rim {
   position: absolute;
   width: 400px;
@@ -108,6 +118,7 @@
 .character-model {
   height: 80%;
   height: 80vh;
+  min-height: 320px;
   position: absolute;
   max-width: 1920px;
   max-height: 1080px;
