--- a/src/components/styles/Navbar.css
+++ b/src/components/styles/Navbar.css
@@ -32,13 +32,22 @@
 }
 .navbar-connect {
   position: absolute;
-  display: none;
   left: 50%;
   top: 50%;
   transform: translate(-50%, -50%);
-  font-size: 15px;
+  font-size: 12px;
   letter-spacing: 1px;
   font-weight: 500;
+  max-width: 50%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+}
+@media only screen and (min-width: 500px) {
+  .navbar-connect {
+    font-size: 15px;
+    max-width: none;
+  }
 }
 .navbar-title {
   font-weight: 700;
@@ -63,7 +72,7 @@
 }
 @media only screen and (min-width: 900px) {
   .navbar-connect {
-    display: block;
+    font-size: 16px;
   }
 }
 @media only screen and (min-width: 1200px) {
