--- a/src/components/styles/SocialIcons.css
+++ b/src/components/styles/SocialIcons.css
@@ -11,7 +11,7 @@
   position: absolute;
   left: -20px;
   bottom: 20px;
-  display: none;
+  display: flex;
   flex-direction: column;
   gap: 8px;
   z-index: 999;
@@ -83,7 +83,6 @@ div.resume-button span {
 }
 @media only screen and (min-width: 900px) {
   .social-icons {
-    display: flex;
     gap: 20px;
   }
   .social-icons a {
